tests/NormalTests/paczka1/fuzzy1/96231795.err
Error in line 14: GxU S315 20,9
Error in line 20: YL2Ww A909 53,0
Error in line 21: YL2Ww S315 16,1
Error in line 18: PFL56am A487 87,9
Error in line 19: A909 S315 53,2
Error in line 39: YLtWw A909 98,t
